// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderHelpMenu Rendering Render HeaderHelpMenu component with props 1`] = `
<React.Fragment>
  <div
    className="HeaderHelpMenu customHelpMenu"
  >
    <button
      aria-controls={null}
      aria-expanded={false}
      aria-haspopup="true"
      className="HeaderHelpMenu__button"
      id="helpMenuButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <AppShellIcon
        icon={[Function]}
        tooltipPlacement="bottom"
        tooltipText="Help"
      />
    </button>
  </div>
</React.Fragment>
`;

exports[`HeaderHelpMenu Rendering Render HeaderHelpMenu component with pseudo translated text 1`] = `
<React.Fragment>
  <div
    className="HeaderHelpMenu customHelpMenu"
  >
    <button
      aria-controls={null}
      aria-expanded={false}
      aria-haspopup="true"
      className="HeaderHelpMenu__button"
      id="helpMenuButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <AppShellIcon
        icon={[Function]}
        tooltipPlacement="bottom"
        tooltipText="Héélp"
      />
    </button>
  </div>
</React.Fragment>
`;
